<resources>
    <string name="app_name">Rozaana Online</string>
    <string name="terms">I agree all statements in <u>terms of service</u></string>
    <string name="rememberMe">Remember me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logIn">Log In</string>
    <string name="emailMobileText">Email/Mobile Number</string>
    <string name="password">Password</string>
    <string name="firstTime">First Time?\t</string>
    <string name="signUp">Sign Up</string>
    <string name="forgetPassword">Forgot Password?</string>
    <string name="have_a_referral_code"><u>Have a referral code</u></string>
    <string name="i_am_already_member">I am already member</string>
    <string name="apply">Apply</string>
    <string name="register">Register</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="your_email">Your Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <!--
    <string name="password">Password</string>
-->
    <string name="repeat_your_password">Repeat your Password</string>
    <string name="login"><u>Login</u></string>
    <string name="resend_code">Resend Code</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="refer_text">Your Friend Earn <font color='#fb4b43'>2%</font> Cashback</string>
    <string name="you_earn">You Earn <font color='#fb4b43'>2%</font> Cashback</string>
    <string name="refer_detail">Your Friend Uses Your Refer Link, Both You &amp; Your Friend Will Earn <font color='#fb4b43'>2%</font> Cashback Together EVERYTIME !</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="faridabad">Faridabad</string>
    <string name="enter_pin_code">Enter pin code</string>
    <string name="enter_address">Enter Address</string>
    <string name="haryana">Haryana</string>
    <string name="submit">submit</string>
    <string name="enter_landmark">Enter Landmark</string>
    <string name="use_my_default_address">Use my default address</string>
    <string name="add_a_new_address">Add a new Address</string>
    <string name="dashboard">Dashboard</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_account">My Account</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="offers">Offers</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="your_addresses">Your Addresses</string>
    <string name="add_new_address"><u>Add new address</u></string>
    <string name="confirm">Confirm</string>
    <string name="your_address">Your Addresses</string>
    <string name="more_products">More Products</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="roz_aana_wallet_transaction_history">ROZ-AANA Wallet Transaction History</string>
    <string name="roz_aana_wallet">ROZ-AANA Wallet</string>
    <string name="r_coins_balance">R-Coins Balance</string>
    <string name="add_money">Add Money</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="send_money_to_mobile_no">Send Money To Mobile No</string>
    <string name="roz_aana_balance">ROZ-AANA Balance</string>
    <string name="my_wallet">My Wallet</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="payment_details">Payment Details</string>
    <string name="mrp_total">MRP Total</string>
    <string name="checkout">Checkout</string>
    <string name="remove_from_basket">Remove from basket</string>
</resources>