<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightish_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homeStructure.GettingAddressFragment">

    <TextView
        android:id="@+id/yourAddressTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_addresses"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/addNewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_address"
        android:textSize="16sp"
        android:textColor="@color/base_theme"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAddress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        tools:listitem="@layout/address_item_list"
        app:layout_constraintTop_toBottomOf="@+id/yourAddressTxt"
        app:layout_constraintBottom_toTopOf="@+id/bottomCardView"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="1.5dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/lightish_gray"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="82dp"
            android:background="@drawable/top_round_card">

            <Button
                android:id="@+id/complete_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:layout_marginEnd="26dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/rounded_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>