<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".entryStructure.SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:minHeight="29dp"
            android:src="@drawable/rozaana_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:fontFamily="@font/poppins"
            android:text="Sign up"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="@dimen/drawable_padding"
                android:textSize="@dimen/normal_text"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:hint="@string/enter_first_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastnameTxt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/enter_last_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmailId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            app:layout_constraintTop_toBottomOf="@+id/lastnameTxt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            app:layout_constraintTop_toBottomOf="@+id/txtEmailId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableTint="@color/black"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold"
                android:hint="@string/enter_phone_number"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:fontFamily="@font/poppins"
                android:inputType="numberDecimal"
                android:maxLength="10"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            app:layout_constraintTop_toBottomOf="@+id/txtPhone"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_color"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPassword2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/repeat_your_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/referralCodeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/have_a_referral_code"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:textStyle="bold"
            android:textSize="@dimen/small_text"
            android:textColor="@color/base_theme"
            android:fontFamily="@font/poppins"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword2"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/referralCodeConstraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/normal_margin"
                app:layout_constraintTop_toBottomOf="@+id/referralCodeTxt">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/coupon_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enterCouponCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter referral Code" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/applyCouponText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_marginEnd="@dimen/standard_margin"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text"
                    android:textColor="@color/base_theme"
                    android:fontFamily="@font/poppins"
                    app:layout_constraintBottom_toBottomOf="@id/coupon_text"
                    app:layout_constraintTop_toTopOf="@id/coupon_text"
                    app:layout_constraintEnd_toEndOf="@+id/coupon_text"/>



            </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/checkboxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/referralCodeConstraint">

            <CheckBox
                android:id="@+id/termscheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="top"
                android:fontFamily="@font/poppins"
                android:padding="8dp"
                android:textColor="@color/base_theme"
                android:text="@string/terms"
                android:textSize="14sp" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/poppins"
            android:background="@drawable/round_corners"
            android:minHeight="36dp"
            android:padding="5dp"
            android:text="@string/register"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkboxLayout" />

        <!--<androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/alreadyMemberTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/i_am_already_member"
            android:textSize="14sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/base_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignup" />-->

        <LinearLayout
            android:id="@+id/acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignup">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/i_am_already_member" />

            <TextView
                android:id="@+id/loginTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:textColor="@color/base_theme"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>